[build-system]
requires = [
    "setuptools >= 61.0",
    "setuptools-scm >= 8.0"
]
build-backend = "setuptools.build_meta"


[project]
name = "keepassxc-async"
description = "Asyncio-compatible client for the KeePassXC browser protocol."
readme = "README.md"
authors = [{ name = "Max Lang" }]

dependencies = [
    "PyNaCl ~= 1.5.0"
]
requires-python = ">= 3.12"

dynamic = "version"


[tool.setuptools_scm]
